apps/windows/configs/manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: windows
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: windows
  namespace: windows
  labels:
    name: windows
spec:
  replicas: 1
  selector:
    matchLabels:
      app: windows
  template:
    metadata:
      labels:
        app: windows
    spec:
      containers:
        - name: windows
          image: dockurr/windows
          ports:
            - containerPort: 8006
              name: http
              protocol: TCP
            - containerPort: 3389
              name: rdp
              protocol: TCP
            - containerPort: 3389
              name: udp
              protocol: UDP
            - containerPort: 5900
              name: vnc
              protocol: TCP
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
            privileged: true
          volumeMounts:
            - mountPath: /storage
              name: storage
            - mountPath: /dev/kvm
              name: dev-kvm
            - mountPath: /dev/net/tun
              name: dev-tun
      terminationGracePeriodSeconds: 120
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: windows-pvc
        - hostPath:
            path: /dev/kvm
          name: dev-kvm
        - hostPath:
            path: /dev/net/tun
            type: CharDevice
          name: dev-tun
---
apiVersion: v1
kind: Service
metadata:
  name: windows
  namespace: windows
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: http
      port: 8006
      protocol: TCP
      targetPort: 8006
    - name: rdp
      port: 3389
      protocol: TCP
      targetPort: 3389
    - name: udp
      port: 3389
      protocol: UDP
      targetPort: 3389
    - name: vnc
      port: 5900
      protocol: TCP
      targetPort: 5900
  selector:
    app: windows
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingressroute-tcp
  namespace: windows
spec:
  entryPoints:
    - rdp-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: windows
          port: 3389
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: windows-web-vnc
  namespace: windows
spec:
  rules:
    - host: windows.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: windows
                port:
                  number: 8006
